Fixed Z-index in page arrows

--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ button{
   transform: translateY(-50%);
   top:50%;
   color:white;
+  z-index: 1;
 }
 
 .page-previous{
